# hackernews-whos-hiring

./: .env.example  .gitignore  LICENSE  README.md  chat_extractor.py  config.py  final_report.py  index.html  jobs.db  main.py  pyproject.toml  site.webmanifest  test.txt  utils.py
.github/workflows/: automerge-reporter.yml  cron-job.yml  monthly-final-report.yml  monthly-report.yml  pr-test.yml  test-job.yml
lib/: __init__.py  csv_to_markdown.py  data_extractor_model.py  data_file.py  news_scrapper.py
models/: __init__.py
scripts/: md-to-sqlite-converter.py  migration-1.py
table/: hn-hiring-august-2023.md  hn-hiring-october-2023.md  hn-hiring-september-2023.md
table/2022/: December.md
table/2023/: April.md  February.md  January.md  July.md  June.md  March.md  May.md  august.md  december.md  november.md  october.md  september.md
table/2024/: April.md  August.md  December.md  February.md  January.md  July.md  June.md  March.md  May.md  November.md  October.md  September.md
table/2025/: April.md  August.md  February.md  January.md  July.md  June.md  March.md  May.md  October.md  September.md
